Fix z-index

--- a/src/WebClientApp/src/components/SidePanel/SidePanel.module.scss
+++ b/src/WebClientApp/src/components/SidePanel/SidePanel.module.scss
@@ -7,7 +7,7 @@
   top: var(--reader-header-offset);
   right: 0;
   height: calc(100% - var(--reader-header-offset));
-  z-index: 3;
+  z-index: 2;
   overflow: hidden;
   background: var(--color-base-01);
   box-shadow: -4px 0px 10px 0px rgba(14, 18, 77, 0.07);
